kubernetes/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-product-api
  namespace: demo-api-dev
spec:
  type: NodePort
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      nodePort: 30002
  selector:
    app: demo-product-api
