kubernetes/dev/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-product-api
  namespace: demo-api-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: dev-demo-product-api.com
      http:
        paths:
          - path: /
            backend:
              serviceName: demo-product-api
              servicePort: 80
